img_pkgdata_DATA = 80ade5_40x100_textures_04_highlight_hard_100.png back_disabled.png back_enabled_hover.png \
		   begin_time.png D1E6FC_40x100_textures_10_dots_medium_90.png d6d6d6_40x100_textures_02_glass_80.png \
		   eeeeee_40x100_textures_02_glass_90.png end_time.png favicon.ico forward_disabled.png \
		   forward_enabled_hover.png forward_enabled.png go-dn-on.gif go-lt-off.gif go-lt-on.gif \
		   go-rt-off.gif go-rt-on.gif go-up-on.gif next_time.png \
		   OGC-LOGO-SQUARE.png pin-dn-off.gif pin-dn-on.gif pin-up-off.gif pin-up-on.gif \
		   resizable-e.gif resizable-n.gif resizable-s.gif resizable-w.gif \
		   sort_asc.png sort_both.png sort_desc_disabled.png sort_desc.png toggle-dn.gif \
		   toggle-up.gif topMenuImages.png \
		   details_open.png details_close.png mbkg.png

img_pkgdatadir = ${prefix}/static/img
