SUBDIRS = gis
admin_img_DATA  =calendar-icons.svg      icon_changelink.gif   icon-yes.svg             selector-icons.gif \
	changelist-bg.gif       icon-changelink.svg   inline-delete-8bit.png   selector-icons.svg \
	changelist-bg_rtl.gif   icon_clock.gif        inline-delete.png        selector-search.gif \
	chooser-bg.gif          icon-clock.svg        inline-delete.svg        sorting-icons.gif \
	chooser_stacked-bg.gif  icon_deletelink.gif   inline-restore-8bit.png  sorting-icons.svg \
	default-bg.gif          icon-deletelink.svg   inline-restore.png       tool-left.gif \
	default-bg-reverse.gif  icon_error.gif        inline-splitter-bg.gif   tool-left_over.gif \
	deleted-overlay.gif     icon-no.gif           LICENSE                  tool-right.gif \
	icon_addlink.gif        icon_searchbox.png    nav-bg.gif               tooltag-add.gif \
	icon-addlink.svg        icon_success.gif      nav-bg-grabber.gif       tooltag-add_over.gif \
	icon_alert.gif          icon-unknown-alt.svg  nav-bg-reverse.gif       tooltag-add.svg \
	icon-alert.svg          icon-unknown.gif      nav-bg-selected.gif      tooltag-arrowright.gif \
	icon_calendar.gif       icon-unknown.svg      README.txt               tooltag-arrowright_over.gif \
	icon-calendar.svg       icon-yes.gif          search.svg               tooltag-arrowright.svg \
	icon-no.svg             tool-right_over.gif \
admin_imgdatadir = ${prefix}/static/admin
