SUBDIRS = admin vendor

admin_js_DATA = actions.js actions.min.js calendar.js cancel.js change_form.js collapse.js collapse.min.js \
		core.js inlines.js jquery.init.js jquery.min.js LICENSE-JQUERY.txt popup_response.js \
		prepopulate.min.js SelectBox.js SelectFilter2.js timeparse.js urlify.js

admin_jsdatadir = ${prefix}/static/admin/js/
