dtblimg_pkgdata_DATA = back_disabled.png back_enabled_hover.png back_enabled.png favicon.ico \
					   forward_disabled.png forward_enabled_hover.png forward_enabled.png \
					   minus.jpg plus.jpg sort_asc_disabled.png sort_asc.png sort_both.png \
					   sort_desc_disabled.png sort_desc.png

dtblimg_pkgdatadir = ${prefix}/static/js/DataTables-1.10.5/media/images
